--- a/Web/views/partials/admin-menu.ejs
+++ b/Web/views/partials/admin-menu.ejs
@@ -108,6 +108,12 @@
 			<% } else { %>
 				<a href="/dashboard/<%= serverData.id %>/stats-points/skynet-points">SkynetPoints</a>
 			<% } %>
+			<% if (currentPage === `/dashboard/${serverData.id}/stats-points/advanced-stats`) { %>
+            <%- include('../partials/admin-sudo.ejs') %>
+			<a class="is-active" href="#"><span class="icon is-small"><i class="fas fa-crown"></i></span> Advanced Stats</a>
+			<% } else { %>
+				<a href="/dashboard/<%= serverData.id %>/stats-points/advanced-stats"><span class="icon is-small"><i class="fas fa-crown"></i></span> Advanced Stats</a>
+			<% } %>
 		</li>
 	</ul>
 	<p class="menu-label">
