--- a/Web/views/partials/maintainer-menu.ejs
+++ b/Web/views/partials/maintainer-menu.ejs
@@ -116,10 +116,10 @@
 			<% } else { %>
 			<a href="/dashboard/maintainer/membership/payments">Payment Providers</a>
 			<% } %>
-			<% if (currentPage === "/dashboard/maintainer/membership/users") { %>
-			<a class="is-active" href="#">User Management</a>
+			<% if (currentPage === "/dashboard/maintainer/membership/servers") { %>
+			<a class="is-active" href="#">Server Management</a>
 			<% } else { %>
-			<a href="/dashboard/maintainer/membership/users">User Management</a>
+			<a href="/dashboard/maintainer/membership/servers">Server Management</a>
 			<% } %>
 		</li>
 	</ul>
