--- a/Web/views/partials/users-section.ejs
+++ b/Web/views/partials/users-section.ejs
@@ -166,14 +166,32 @@ SkynetUtil.searchUsers = (query) => {
 						<div class="modal-container">
 							<div class="modal-content">
 								<div class="box">
+									<h3 class="title is-4 mb-4">
+										<span class="icon"><i class="fa fa-server"></i></span>
+										Mutual Servers
+									</h3>
 									<% pageData.userProfile.mutualServers.forEach(mutualServer => { %>
-										<article class="media">
+										<article class="media" style="border-bottom: 1px solid #eee; padding-bottom: 1rem; margin-bottom: 1rem;">
 											<div class="media-left">
-												<img class="image is-64x64" src="<%= mutualServer.icon %>" alt="<%= mutualServer.id %>">
+												<img class="image is-64x64" src="<%= mutualServer.icon %>" alt="<%= mutualServer.id %>" style="border-radius: 50%;">
 											</div>
 											<div class="media-content">
-												<p class="title is-3"><%= mutualServer.name %></p>
-												<p class="subtitle is-5">Owned by @<%= mutualServer.owner %></p>
+												<p class="title is-4 mb-1"><%= mutualServer.name %></p>
+												<p class="subtitle is-6 has-text-grey mb-2">Owned by @<%= mutualServer.owner %></p>
+												<% if (mutualServer.profileFields) { %>
+													<div class="server-profile-fields" style="background: #f5f5f5; padding: 0.75rem; border-radius: 6px; margin-top: 0.5rem;">
+														<p class="is-size-7 has-text-grey-dark mb-2">
+															<span class="icon is-small"><i class="fa fa-id-card"></i></span>
+															<strong>Server Profile</strong>
+														</p>
+														<% for(var key in mutualServer.profileFields) { %>
+															<p class="is-size-7">
+																<strong><%= key.charAt(0).toUpperCase() + key.slice(1) %>:</strong> 
+																<%- mutualServer.profileFields[key] %>
+															</p>
+														<% } %>
+													</div>
+												<% } %>
 											</div>
 											<a class="media-right" href="/activity/servers?q=<%= mutualServer.name %>">
 												<span class="icon is-medium">
